--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.10.0",
     "aos": "^2.3.4",
     "bootstrap": "^5.3.2",
     "copy-to-clipboard": "^3.3.3",
@@ -22,6 +23,7 @@
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
     "reactstrap": "^9.2.0",
     "redux": "^4.2.1",
     "styled-components": "^6.0.8",
